ajustes criacao de bot e server
